# bot_recipe

./: alembic.ini  config.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml  requirements.txt  run.py
backend/: main.py
backend/api/: __init__.py  admin.py  recipes.py  users.py
backend/core/: database.py  exceptions.py
backend/middlewares/: swagger_auth.py
backend/migrations/: env.py
backend/migrations/versions/: 146db5c4dc54_creating_categories.py  a3c805ef58f3_init.py
backend/mixins/: __init__.py  database_mixin.py
backend/models/: category_model.py  recipe_model.py  user_model.py
backend/repositories/: __init__.py  base.py
backend/schemas/: base.py  recipe_schema.py  user_schema.py
v2/: alembic.ini  main.py
v2/filters/: is_admin.py
v2/fms/: create_recipe_fms.py
v2/handlers/: __init__.py  help.py  start.py
v2/handlers/admin/: admin_handler.py
v2/handlers/recipes/: create_recipe_handler.py  detail_recipe_handler.py  main_menu_handler.py  my_recipes_handler.py  pagination_page_handler.py  recipe_handler.py
v2/middlewares/: container_middleware.py
v2/schemas/: recipe_dto.py  user_dto.py
v2/services/: admin_service.py  api_client.py  container.py  interfaces.py  recipe_builder.py  recipe_service.py  user_builder.py  user_registration_service.py  user_service.py
v2/ui/components/: message_sender.py  pagination.py
v2/ui/formatters/: recipe_formatter.py
v2/ui/keyboards/: recipe_keyboard.py
v2/ui/renderers/: admin_render.py  create_recipe_render.py  recipe_renderer.py  (+1 more)
v2/utils/: callbacks.py  constants.py  enums.py
